builtinresource/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: default
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      # tolerations:
      # # this toleration is to have the daemonset runnable on master nodes
      # # remove it if your masters can't run pods
      # - key: node-role.kubernetes.io/master
      #   effect: NoSchedule
      containers:
      - name: node-exporter
        image: prom/node-exporter
        ports:
        - containerPort: 9100
