builtinresource/django.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django
  namespace: pranob-test
spec:
  containers:
    - name: django
      image: 283623578217.dkr.ecr.eu-west-1.amazonaws.com/django-template:HEAD.2
      imagePullPolicy: Always
      ports:
        - containerPort: 8000
          name: service
          protocol: TCP
      resources: {}
        # requests:
      #     cpu: "1"
      #     memory: "64Gi"
      # # limits:
      # #   cpu: "1"
      # #   memory: "1Gi"
      
        

      volumeMounts:
        - name: db
          mountPath: /db

      readinessProbe:
      exec:
        command:
        - cat
        - /tmp/healthy
      initialDelaySeconds: 5
      periodSeconds: 5

  volumes:
    - name: db
      emptyDir: {}
