builtinresource/pod-definiton.yml
apiVersion: v1

kind: Pod

metadata:
  name: myapp-pod # name of the pod
  labels:
    app: myapp # name of the App
    type: front-end

spec:
  containers:  
    - name: nginx-container
      image: nginx
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
