builtinresource/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pranob-001
spec:
  containers:
    - name: nginx
      image: nginx:perl
      ports:
        - containerPort: 80
      resources:
        limits:
          cpu: "1"
          memory: "1Gi"
        requests:
          cpu: "0.5"
          memory: "512Mi"
