builtinresource/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxs
spec:
  clusterIP: None  # ← Headless!
  selector:
    app: nginx
  ports:
  - port: 80
    name: http
