builtinresource/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: pranob-test-namespace
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
