builtinresource/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: django-service
#   namespace: pranob-test
# spec:
#   selector:
#     app: django
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 8000
#   type: LoadBalancer


apiVersion: v1
kind: Service
metadata:
  name: external-django-service
  namespace: pranob-test
  annotations:
    external-dns.alpha.kubernetes.io/hostname: django-pranob.xaonline.club
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: django
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
