builtinresource/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  rules:

  - host: foo.bar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 8080

  - host: baz.qux.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 8080
